--- a/lessons/templates/index_unified.html
+++ b/lessons/templates/index_unified.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn French | Crystal Edition</title>
+    <title>Learn French</title>
     <link rel="icon" type="image/png" href="{% static 'favicon.ico' %}">
     <link rel="apple-touch-icon" href="{% static 'apple-touch-icon.png' %}">
     <link rel="stylesheet" href="{% static 'lessons/styles_unified.css' %}?v=5">
