Final project sync: Renamed to FrenchLessons, implemented Google Auth with auto-linking, refined premium UI/UX, and updated documentation

--- a/apps/core/templates/components/header.html
+++ b/apps/core/templates/components/header.html
@@ -13,7 +13,7 @@
             
             <a href="{% url 'core:index' %}" class="brand-logo">
                 <div class="brand-icon">F</div>
-                <span class="brand-text">Learn French</span>
+                <span class="brand-text">FrenchLessons</span>
             </a>
         </div>
         
