--- a/apps/users/templates/users/login.html
+++ b/apps/users/templates/users/login.html
@@ -1,7 +1,7 @@
 {% extends "users/base_auth.html" %}
 {% load i18n %}
 
-{% block title %}{% trans "Вход" %} | Learn French{% endblock %}
+{% block title %}FrenchLessons - {% trans "Вход" %}{% endblock %}
 {% block auth_title %}{% trans "С возвращением!" %}{% endblock %}
 
 {% block auth_form %}
