--- a/apps/users/templates/users/signup.html
+++ b/apps/users/templates/users/signup.html
@@ -1,7 +1,7 @@
 {% extends "users/base_auth.html" %}
 {% load i18n %}
 
-{% block title %}{% trans "Регистрация" %} | Learn French{% endblock %}
+{% block title %}FrenchLessons - {% trans "Регистрация" %}{% endblock %}
 {% block auth_title %}{% trans "Создать аккаунт" %}{% endblock %}
 
 {% block auth_form %}
