debug: add compilemessages to deploy and debug info to header

--- a/apps/core/templates/components/header.html
+++ b/apps/core/templates/components/header.html
@@ -1,5 +1,5 @@
 {% load static i18n %}
-    <!-- Top Header Bar -->
+    <!-- Top Header Bar (Active Lang: {{ LANGUAGE_CODE }}) -->
     <header class="top-bar">
         <div class="brand-area">
             <!-- Simple hamburger for light theme mobile -->
