--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load lesson_filters %}
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="{{ LANGUAGE_CODE }}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
