Hardcode Email label to 'эмейл' to ensure emoji removal

--- a/apps/users/templates/users/profile.html
+++ b/apps/users/templates/users/profile.html
@@ -159,7 +159,7 @@
             <span class="profile-info-value">{{ user.username }}</span>
         </div>
         <div class="profile-info-item">
-            <span class="profile-info-label">{% trans "Email" %}</span>
+            <span class="profile-info-label">эмейл</span>
             <span class="profile-info-value">{{ user.email }}</span>
         </div>
         {% if user.first_name or user.last_name %}
